# bare-cli

./: README.md  main.py  pyproject.toml
atom_cli/: atom_cli.py  block.py  block_factory.py  block_formatter.py  invalid_choice_error.py  styled_string.py  styled_string_factory.py  styled_string_formatter.py
bare_cli/: __init__.py  __main__.py  bare_cli.py  block.py  block_factory.py  block_formatter.py  color_mapper.py  enums.py  status.py  statusline.py  table_planner.py
bare_cli/blocks/: abstract_block.py  border_block.py  cell_block.py  choice_block.py  misc_block.py  nested_status_block.py  open_status_block.py  status_block.py
bare_cli/enums/: accent_color.py  status.py
tests/: test_tables.py
