[project]
name = "bare-cli"
version = "1.0.0"
description = "May your CLI code be semantic and your text output beautifully bare."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.11",
    "types-colorama>=0.4.15.20250801",
]
